feat: firm ve product controller da ve queryHandler da degisiklik
