# src/configs/swagger.json
@@ -49,6 +49,11 @@
         "description": "Login with username (or email) and password for get Token and JWT.",
         "parameters": [
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -86,6 +91,11 @@
         "description": "Refresh access-token by refresh-token.",
         "parameters": [
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -122,6 +132,13 @@
         ],
         "summary": "Token: Logout",
         "description": "Delete token-key.",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -139,6 +156,13 @@
         ],
         "summary": "List Users",
         "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -155,6 +179,11 @@
         "summary": "Create User",
         "description": "",
         "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -187,6 +216,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -209,6 +243,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           },
           {
@@ -241,6 +280,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -272,6 +316,11 @@
             "type": "string"
           },
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -297,6 +346,13 @@
         ],
         "summary": "List Categories",
         "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -313,6 +369,11 @@
         "summary": "Create Category",
         "description": "",
         "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -345,6 +406,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -367,6 +433,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           },
           {
@@ -399,6 +470,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -427,6 +503,11 @@
             "type": "string"
           },
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -452,6 +533,13 @@
         ],
         "summary": "List Types",
         "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -468,6 +556,11 @@
         "summary": "Create Type",
         "description": "",
         "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -500,6 +593,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -522,6 +620,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           },
           {
@@ -554,6 +657,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -582,6 +690,11 @@
             "type": "string"
           },
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -603,6 +716,13 @@
     "/products/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -616,6 +736,11 @@
         "summary": "Create Product",
         "description": "",
         "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -636,9 +761,6 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
@@ -658,8 +780,8 @@
             "type": "string"
           },
           {
-            "name": "Frontend-Domain",
-            "in": "header",
+            "name": "type",
+            "in": "query",
             "type": "string"
           }
         ],
@@ -669,9 +791,6 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
@@ -686,6 +805,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           },
           {
@@ -718,6 +842,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -746,6 +875,11 @@
             "type": "string"
           },
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -767,6 +901,13 @@
     "/firms/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -780,6 +921,11 @@
         "summary": "Create Firm",
         "description": "",
         "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -816,11 +962,24 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "frontend-domain",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -838,6 +997,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           },
           {
@@ -859,9 +1023,6 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       },
@@ -876,6 +1037,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
             "type": "string"
           }
         ],
@@ -905,6 +1071,11 @@
             "type": "string"
           },
           {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -923,9 +1094,6 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       }
@@ -939,6 +1107,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -951,6 +1124,13 @@
     "logs/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -963,6 +1143,13 @@
         ],
         "summary": "Delete Product",
         "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "204": {
             "description": "No Content"
@@ -1002,6 +1189,31 @@
                   "example": "Satıcının ait olduğu firmanın bilgisi için firma id si girilmesi zorunludur. "
                 }
               }
+            }
+          }
+        },
+        "favoritesId": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "function"
+                  },
+                  "ref": {
+                    "type": "string",
+                    "example": "Firm"
+                  }
+                }
+              }
+            },
+            "default": {
+              "type": "array",
+              "example": [],
+              "items": {}
             }
           }
         },
@@ -1085,6 +1297,18 @@
             }
           }
         },
+        "age": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "function"
+            },
+            "required": {
+              "type": "boolean",
+              "example": true
+            }
+          }
+        },
         "image": {
           "type": "object",
           "properties": {
@@ -1110,6 +1334,18 @@
           }
         },
         "isStaff": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "function"
+            },
+            "default": {
+              "type": "boolean",
+              "example": false
+            }
+          }
+        },
+        "isBloked": {
           "type": "object",
           "properties": {
             "type": {
@@ -1308,6 +1544,18 @@
             }
           }
         },
+        "advantages": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "function"
+            },
+            "default": {
+              "type": "string",
+              "example": ""
+            }
+          }
+        },
         "rating": {
           "type": "object",
           "properties": {
@@ -1342,6 +1590,18 @@
           }
         },
         "isActive": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "function"
+            },
+            "default": {
+              "type": "boolean",
+              "example": true
+            }
+          }
+        },
+        "isOpen": {
           "type": "object",
           "properties": {
             "type": {
@@ -1457,10 +1717,6 @@
           "properties": {
             "type": {
               "type": "function"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
             }
           }
         }
